--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,12 @@
 [theme]
-primaryColor="#F63366"
+
+base="light"
+primaryColor="#16423C"
+secondaryBackgroundColor="#FCDE70"
+textColor="#16423C"
+
+#primaryColor="#F63366"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+#secondaryBackgroundColor="#F0F2F6"
+#textColor="#262730"
 font="sans serif"
